20/01/2012

In response to feedback - I did the following:
Rewrote the grammar to make it cleaner and remove some grammar bugs that were hindering us.
Rewrote Analyser that walks the Abstract Syntax tree, since grammar nodes changed, and we 
learnt a lot from previous attempts which means we can have a smaller better Analyser.
Rewrote Bytecode generator to be cleaner.
Rewrote Java layer of classes to more closely reflect the "meta" nature of Smalltalk. Making
a class correctly requires the creation and population of a Metaclass and then asking it for
an instance of the class.
Added tests, tests and more tests.

01/01/2012

Added check for null in superclass call. Answers nil if null.

30/12/2011 

Fixed issue #49. Bootstrapped Mataclass had incorrect superclass set.
Added primitive 220 to lookup if a receiver canUnderstand a selector.
Added primitive 221 to see which class contains a method dictionary that includes a selector.
Adjusted primitive 220/221 to look in receiver not receivers class.
Added HelloWorld back, it was accidentally deleted.
Fixed empty stack bug when block return isn't followed by other stack activity.

29/12/2011

Fixed issue #50 ==. All ObjectTests pass. One test was a false positive and has been fixed.
Ensured MetaClass was registered to ensure we dont get two in memory.
Added naming of Class' metaclass to make debug/stack trace output easier to read.

28/12/2011

Added primitive p218 which gets the internal fullyqualified name of the receiver,
or 'unnamed' if the receiver is not a class.

27/12/2011

Fixed issue #65 with block referring to outer self and getting block, not outer self.

25/12/2011

Added support for subclass:instanceVariableNames:classVariableNames:poolDictionaries:
*Note, need support for classInstanceVariableNames.
Fixed string with nested ''

24/12/2011

Fixed issue with nested arrays ('foo' ('bar') 'baz').
Fixed issue relating to basicSize. There is an associated issue with iterating through arrays.